# stock-scrapper

./: .env  Dockerfile  README.md  Req.txt  db.sqlite3  docker-compose.yml  pyproject.toml
StockProject/: asgi.py  settings.py  urls.py  wsgi.py
Users/: Scrapper.py  admin.py  consumers.py  models.py  routing.py  test.py  urls.py  views.py
Users/migrations/: 0001_initial.py
Users/static/: live2.css
Users/templates/: live.html  live2.html  live3.html
quotes/: urls.py  views.py
quotes/templates/: base.html  home.html
