[tool.poetry]
name = "stock-scrapper"
version = "0.1.0"
description = ""
authors = ["Utsav-dignizant <utsavmoradiyal.dignizant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
channels = "4.0.0"
channels-redis = "4.1.0"
cryptography = "40.0.1"
daphne = "4.0.0"
django = "4.2"
django-cors-headers = "3.14.0"
djangorestframework = "3.14.0"
pytz = "2023.3"
redis = "4.5.4"
python-dotenv = "^1.0.0"
yfinance = "^0.2.33"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
